# dataintigrity

./: .gitignore  CHANGELOG.md  README.md  debug_hang.py  pyproject.toml  requirements.txt  sample.csv  sample.manifest.json  sample_pii.csv  setup.py  synthetic_dataset_20000.csv
dataintegrity/: __init__.py  cli.py
dataintegrity.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
dataintegrity/connectors/: __init__.py  base.py  csv.py  postgres.py
dataintegrity/core/: __init__.py  config.py  config_hashing.py  dataset.py  execution.py  hashing.py  result_schema.py  store.py  versioning.py
dataintegrity/drift/: __init__.py  ks.py
dataintegrity/ingestion/: __init__.py  normalizer.py  pii.py  pii_registry.py  schema_contract.py
dataintegrity/integrity/: __init__.py  comparison.py  engine.py  history.py  plugins.py  risk_model.py  rules.py  scorer.py
dataintegrity/policies/: __init__.py  base.py  file_policy.py  production.py  research.py
dataintegrity/standards/: __init__.py  iso_25012.py
tests/: test_iso_25012_profile.py  test_pii_governance.py  test_pii_upgrade.py  test_policy_engine.py  test_postgres_cli.py  test_release_smoke.py  test_v021.py  test_v030.py
