[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dataintegrity"
version = "0.3.0"
description = "A production-grade data infrastructure SDK for integrity, quality, and drift detection."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
authors = [
  { name = "dataintegrity" }
]
keywords = [
  "data-quality",
  "data-integrity",
  "schema-validation",
  "pii-detection",
  "drift-detection",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

dependencies = [
  "pandas>=2.0.0",
  "numpy>=1.24.0",
  "scipy>=1.11.0",
  "sqlalchemy>=2.0.0",
  "click>=8.1.0",
  "psycopg2-binary>=2.9.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-cov",
  "black",
  "ruff",
  "mypy",
  "types-setuptools",
]

[project.scripts]
dataintegrity = "dataintegrity.cli:cli"

[project.urls]
Homepage = "https://github.com/your-org/dataintegrity"
Repository = "https://github.com/your-org/dataintegrity"
Issues = "https://github.com/your-org/dataintegrity/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["dataintegrity*"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.mypy]
python_version = "3.9"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
